--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ li {
 ul {
     color: #CFDEE8;
 }
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .card {
     background: #00000000;
 }
@@ -52,9 +57,9 @@ ul {
     background-size:contain;
     background-repeat:no-repeat;
 }
-.text-responsive {
-    font-size: calc(10% + 1vw + 1vh);
-  }
+/* .text-responsive {
+    font-size: calc( 1vw + 1vh);
+  } */
 #intro{
     background-color: #0000ee0c;
     border: solid;
